 - service table: added control proc member to allow Jemm to call out on 
   certain events; currently "device_reboot_notify" is the only call-out. 
 - Simulate_Int: call an installed v86 hook proc before running the INT.
 - JemmEx, XMS AH=0Eh: invalid handle returned if size > 65535 kB; this is
   MS Himem compatible.
 - JLMs Reboot & FastBoot added.
 - fixed debug displays in 16-bit part.

 10.01.2025: v5.85
 - fixed: VDS func ax=810Ch: set ZF if disable cnt reaches zero.
 - fixed: VDS: added several argument checks ( mostly DX ).
 - fixed: ISA DMA ports 000A-000F must be handled by Jemm to detect FD accesss
   even if external handler has trapped these ports.
 - fixed: it was assumed that value for TR to be loaded in VCPI function
   ax=DE0Ch ( switch from v86- to protected-mode) had bits 0-2 cleared.
 - linear address region 110000-3FFFFF is now only mapped as far as needed by
   the monitor program.
 - optional kernel-debugger-aware variant calls int 68h for deinitialization.
 - cmdline switch NOVMW added.
 - easier log displays via macro @dprintf.
 - log displays redirected to kernel debugger if one has been detected.
 - buffered output of log displays removed.
 - switch ?SAFEKBD=1 is now default for JemmEx (restores IVT vector 15h before
   reading a key press via int 16h during system errors).
 - JemmDbg renamed to JDeb386 and removed from Jemm source package.
 - building JemmExL.exe removed from Makefile; to create it, use JemmExL.mak.
 - CPUSTAT: optionally displays interrupt redirection bitmap.

 12.02.2024: v5.84
 - fixed: Simulate_IO() no longer calls trap handler.
 - QPIEMU: new JLM that partly implements Qemm's API (QPI).
 - fixed: int 67h, ax=5B01h will return error code A3h if checksum invalid.
 - JemmDbg: removed from binary package.

 06.12.2022: v5.83
 - AHCICD: new JLM for CD/DVD devices attached to a SATA controller running
   in AHCI mode (cooked mode only).
 - XDMA32, XCDROM32: now accepting "AHCI-disabled" SATA controllers.